# pyrig-resources

./: README.md  mkdocs.yml  prek.toml  pyproject.toml
.github/: configure.sh  settings.json
.github/workflows/: health_check.yml
docs/: api.md  index.md
src/pyrig_resources/: __init__.py
src/pyrig_resources/rig/: __init__.py
src/pyrig_resources/rig/configs/: __init__.py  resources_init.py
src/pyrig_resources/rig/resources/: __init__.py
tests/test_pyrig_resources/test_rig/test_configs/: test_resources_init.py
