[project]
name = "pyrig-resources"
version = "1.11.0"
description = "A pyrig plugin that adds resources support."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pyrig-runtime",
    "pyrig>=15.4.1",
]
license = "MIT"
license-files = [
    "LICENSE",
]
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Operating System :: OS Independent",
    "Typing :: Typed",
]
keywords = [
    "pyrig",
]

[[project.authors]]
name = "Winipedia"

[[project.maintainers]]
name = "Winipedia"

[project.urls]
Homepage = "https://github.com/Winipedia/pyrig-resources"
Documentation = "https://Winipedia.github.io/pyrig-resources"
Source = "https://github.com/Winipedia/pyrig-resources"
Issues = "https://github.com/Winipedia/pyrig-resources/issues"
Changelog = "https://github.com/Winipedia/pyrig-resources/releases"

[project.scripts]
pyrig-resources = "pyrig_runtime.rig.cli.main:main"

[dependency-groups]
dev = [
    "bandit>=1.9.4",
    "deptry>=0.25.1",
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.7.6",
    "mkdocs-mermaid2-plugin>=1.2.3",
    "mkdocstrings[python]>=1.0.4",
    "pip-audit>=2.10.1",
    "prek>=0.4.5",
    "pyrig",
    "pyrig-codecov>=1.3.3",
    "pyrig-pypi>=1.5.4",
    "pytest>=9.1.0",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.17",
    "rumdl>=0.2.17",
    "ty>=0.0.49",
    "typos>=1.47.2",
]

[build-system]
requires = [
    "uv_build",
]
build-backend = "uv_build"

[tool.ruff.lint]
select = [
    "ALL",
]
ignore = [
    "COM812",
    "ANN401",
]
fixable = [
    "ALL",
]

[tool.ruff.lint.per-file-ignores]
"**/tests/**/*.py" = [
    "S101",
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ty.terminal]
error-on-warning = true

[tool.pytest.ini_options]
testpaths = [
    "tests",
]
addopts = "--cov=pyrig_resources --cov-branch --cov-report=term-missing --cov-fail-under=100 --cov-report=xml"

[tool.bandit.assert_used]
skips = [
    "*/tests/*.py",
    "*/test_*/*.py",
]

[tool.deptry]
root = "src"

[tool.deptry.per_rule_ignores]
DEP002 = [
    "pyrig-runtime",
]
